# Tarkov-Bag

./: .gitignore  README.md
backend/: .env.prod  items.json  pyproject.toml
backend/src/: __main__.py  settings.py
backend/src/database/: __init__.py
backend/src/database/models/: __init__.py  group.py  group_requests.py  item.py  user.py  user_group_association.py  user_item_association.py
backend/src/database/repo/: __init__.py  group.py  group_requests.py  item.py  user.py  user_items.py
backend/src/depends/: __init__.py  auth.py  common.py  db.py
backend/src/handlers/: auth.py  groups.py  items.py  users.py
backend/src/routers/: __init__.py
backend/src/routers/v1/: __init__.py
backend/src/routers/v1/auth/: __init__.py  models.py  router.py
backend/src/routers/v1/groups/: __init__.py  models.py  router.py
backend/src/routers/v1/items/: __init__.py  models.py  router.py
backend/src/routers/v1/users/: __init__.py  models.py  router.py
backend/src/routers/v1/utils/: __init__.py  router.py
backend/src/services/: __init__.py  authservice.py  blocklist.py  tarkov_dev.py
backend/tests/: __init__.py  adt_test_classes.py  conftest.py
frontend/: .env.prod  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: auth.jsx  base.jsx  main.jsx
frontend/src/components/: item.jsx
frontend/src/context/: auth.jsx  mobile.jsx  theme.jsx
frontend/src/css/: base.css  custom_header.css  loading.css  mobile_desktop.css  overlay.css  search.css  select_dropdown.css  style.css
frontend/src/pages/: dashboard.jsx  (+2 more)
(+18 files in other folders)
